// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksMonitor reducer should handle DELETE_SUBSCRIPTIONS_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": false,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle DELETE_SUBSCRIPTIONS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle DELETE_SUBSCRIPTIONS_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": false,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle GET_SETTING_SUCCESS with content_disconnected response 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": "some-value",
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle GET_SETTING_SUCCESS without content_disconnected response 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_CLOSE_DELETE_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_CLOSE_MANIFEST_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_DISABLE_DELETE_BUTTON 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_ENABLE_DELETE_BUTTON 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": false,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": false,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_OPEN_DELETE_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": true,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_OPEN_MANIFEST_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_QUANTITIES_FAILURE 1`] = `
Object {
  "availableQuantities": Object {},
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_QUANTITIES_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": true,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_QUANTITIES_SUCCESS 1`] = `
Object {
  "availableQuantities": "some-quantities-data",
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 20,
  "loading": false,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "quantitiesLoading": false,
  "results": "some-results",
  "search": "some search",
  "searchIsActive": true,
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle SUBSCRIPTIONS_UPDATE_SEARCH_QUERY 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "some-search-query",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle UPDATE_QUANTITY_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": false,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle UPDATE_QUANTITY_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should handle UPDATE_QUANTITY_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": false,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;

exports[`TasksMonitor reducer should return the initial state 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "itemCount": 0,
  "loading": true,
  "manifestModalOpened": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "taskModalOpened": false,
}
`;
